
syntax = "proto3";

option go_package = "github.com/structx/ddns/proto/ddns/v1";

package ddns.v1;

import "google/protobuf/timestamp.proto";

service DDNSServiceV1 {
    rpc Ping (PingRequest) returns (PingResponse) {}
    rpc Store (StoreRequest) returns (StoreResponse) {}
    rpc FindNode (FindNodeRequest) returns (FindNodeResponse) {}
    rpc FindValue (FindValueRequest) returns (FindValueResponse) {}
}

message Sender {
    bytes node_id = 1;
    google.protobuf.Timestamp requested_at = 2;
}

message Echo {
    string ip = 1;
    int64 port = 2;
    bytes node_id = 3;
    google.protobuf.Timestamp completed_at = 4;
}

message PingRequest {
    Sender sender = 1;
}

message PingResponse {
    Echo echo = 1;
}

message StoreRequest {
    Sender sender = 1;
    bytes key = 2;
    bytes value = 3;
}

message StoreResponse {
    Echo echo = 1;
}

message FindNodeRequest {
    Sender sender = 1;
    bytes node_id = 2;
}

message KContact {
    bytes node_id = 1;
    string address = 2;
}

message KBucket {
    bytes node_id = 1;
    repeated KContact contact_list = 2;
}

message FindNodeResponse {
    Echo echo = 1;
    repeated KBucket bucket_list = 2;
}

message FindValueRequest {
    Sender sender = 1;
}

message FindValueResponse {
    Echo echo = 1;
}